# fpa-management

./: .gitignore  FPA Admin.session.sql  README.md  docker-compose.yaml
.devcontainer/fpa-client/: Dockerfile  devcontainer.json  docker-compose.yml
.devcontainer/fpa-server/: Dockerfile  devcontainer.json  docker-compose.yml
.gitsecret/keys/: pubring.kbx  pubring.kbx~  trustdb.gpg
.gitsecret/paths/: mapping.cfg
database/: Dockerfile  README.md  diagram.md
database/Scripts/: Script.sql
database/setup/: 001-users-docker.sql  001-users.sql  002-database.sql  003-database-roles.sql  004-domains.sql  005-schemas.sql  006-tables.sql  010-roles.sql  011-populate.sql  999-desenv.sql
fpa-client/: Dockerfile  README.md  angular.json  package-lock.json  package.json  release.js  release.ts  tsconfig.app.json  tsconfig.json  tsconfig.spec.json
fpa-client/.angular/cache/19.1.5/fpa-client/: .tsbuildinfo
fpa-client/.angular/cache/19.1.5/fpa-client/vite/deps_ssr/: _metadata.json
fpa-client/src/: index.html  styles.css  styles.scss
fpa-client/src/app/: app.component.html  app.component.scss  app.component.spec.ts  app.component.ts  app.config.ts  app.routes.ts
fpa-client/src/app/components/footer/: footer.component.html  footer.component.scss  footer.component.ts
fpa-client/src/app/components/forbidden/: forbidden.component.ts
fpa-client/src/app/components/header/: header.component.html  header.component.scss  header.component.ts
fpa-client/src/app/components/login/: login.component.html  login.component.scss  login.component.ts
fpa-client/src/app/footer/: footer.component.css  footer.component.html  footer.component.ts
fpa-client/src/app/guards/: auth-role.guard.ts  auth.guard.ts
fpa-client/src/app/header/: header.component.css  header.component.html  header.component.ts
fpa-client/src/app/services/: auth.guard.ts  auth.interceptor.ts  auth.service.ts  token.service.ts
fpa-client/src/environments/: environment.development.ts  environment.ts
fpa-client/src/locale/: messages.pt.xlf  messages.xlf
fpa-server/: Cargo.toml  Dockerfile  README.md  config.ini  config.yaml  log4rs.yaml
fpa-server/src/: auth.rs  configuration.rs  context.rs  ctx.rs  docs.rs  error.rs  handlers.rs  jwks.rs  lib.rs  log.rs  main.rs  mapper.rs  respmapper.rs  state.rs
fpa-server/src/handlers/: empiricals.rs  factors.rs  frontiers.rs  functions.rs  mod.rs  modules.rs  projects.rs
fpa-server/src/model/: alrs.rs  ders.rs  empiricals.rs  factors.rs  frontiers.rs  functions.rs  functions_datas.rs  functions_transactions.rs  functions_types.rs  influences.rs  mod.rs  modules.rs  page.rs  prelude.rs  projects.rs  projects_empiricals.rs  projects_factors.rs  rlrs.rs  sea_orm_active_enums.rs  tenants.rs  tenants_status.rs  tenants_tier.rs  tests.rs  users.rs  versions.rs
fpa-server/tests/: dev.rs  empiricals.rs  factors.rs  frontiers.rs  functions.rs  health.rs  modules.rs  projects.rs  tokens.rs  unauth.rs
fpa-server/tests/shared/: mod.rs  selects.rs  tokens.rs
oauth-2/: Dockerfile  README.md  default-realm.json  default-realm.json.secret  tenant-01-realm.json  tenant-02-realm.json
