[package]
name = "fpa-server"
version = "0.3.0"
edition = "2021"
description = "Project Management using Function Points Analysis."
authors = ["Luciano Vieira Rodrigues <lvrodrigues@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
chrono = { version = "0.4.38", features = ["serde"] }
config = "0.14.0"
jsonwebtoken = "9.3.0"
reqwest = { version = "0.12.5", features = ["json"] }
sea-orm = { version = "0.12.15", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_derive = "1.0.203"
serde_json = "1.0.118"
serde_with = "3.8.1"
serde_yaml = "0.9.33"
strum_macros = "0.26.4"
tokio = { version = "1.38.0", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["fs"] }
url = "2.5.2"
utoipa = { version = "4.2.3", features = ["axum_extras", "uuid", "chrono", "openapi_extensions", "time"] }
utoipa-rapidoc = { version = "4.0.0", features = ["axum"] }
utoipa-redoc = { version = "4.0.0", features = ["axum"] }
utoipa-swagger-ui = { version = "7.1.0", features = ["axum"] }
uuid = { version = "1.9.1", features = ["serde", "v4", "v7"] }

[dev-dependencies]
anyhow = "1.0.83"
